<resources>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="app_name">智校园</string>
    <string name="button_default">默认</string>
    <string name="button_wedding">婚礼</string>
    <string name="button_weddingdress">婚纱</string>
    <string name="button_parenting">亲子</string>
    <string name="button_photo">写真</string>
    <string name="button_pet">宠物</string>
    <string name="button_stilllife">静物</string>
    <string name="button_image">形象</string>
    <string name="button_active">活动</string>
    <string name="button_architeture">建筑</string>
    <string name="button_other">其他</string>
    <string name="button_null"></string>
    <string name="service">服务</string>
    <string name="photography_time">拍摄时间</string>
    <string name="one_days">1天</string>
    <string name="pic_num">照片数</string>
    <string name="num_pic">150张</string>
    <string name="dress_num">精修片数</string>
    <string name="num_dress">50张</string>
    <string name="nagative">底片</string>
    <string name="all">全送</string>
    <string name="studio">影棚</string>
    <string name="no">不提供</string>
    <string name="dress">化妆</string>
    <string name="yes">提供</string>
    <string name="clothes">衣服</string>
    <string name="album">相册</string>
    <string name="add">附加说明</string>
    <string name="now_shoot">立即预约</string>
    <string name="onebyone">私聊</string>
    <string name="evaluation_service">服务评价</string>
    <string name="evaluation">评价</string>
    <string name="noevaluation">暂无评价</string>
    <string name="allofevaluation">查看所有评论</string>
    <string name="menu_settings">Settings</string>
    <string name="name">姓名</string>
    <string name="telephone">电话</string>
    <string name="code">验证码</string>
    <string name="serch_code">获取验证码</string>
    <string name="photo_day">拍摄日期：</string>
    <string name="remarks">备注：</string>
    <string name="comprehensive">综合排行</string>
    <string name="fans_number">粉丝数</string>
    <string name="fans">粉丝</string>
    <string name="reservation_number">预约数</string>
    <string name="attention">关注</string>
    <string name="input">请输入</string>
    <string name="sure">确认</string>
    <string name="saytosay">聊一聊</string>
    <string name="personal_homepage">个人主页</string>
    <string name="photo_description">照片描述：</string>
    <string name="select_city">选择城市</string>
    <string name="gprs_location">GPRS定位城市</string>
    <string name="ready_city">已开通服务城市</string>
    <string name="shoot_information">约拍信息</string>
    <string name="user_participation">参与用户</string>
    <string name="launched_shoot">发起约拍</string>
    <string name="photo_title">拍摄标题：</string>
    <string name="photo_time">拍摄时间：</string>
    <string name="photo_city">拍摄城市：</string>
    <string name="photo_adress">拍摄地址：</string>
    <string name="photo_category">拍摄类别：</string>
    <string name="budget_amount">预算金额：</string>
    <string name="my_request">我的要求</string>
    <string name="my_attention">我的关注</string>
    <string name="my_appointment">我的预约</string>
    <string name="my_shoot">我的约拍</string>
    <string name="passed">已通过</string>
    <string name="pass">通过</string>
    <string name="refuse">拒绝</string>
    <string name="join">参与</string>
    <string name="service_category">服务类别：</string>
    <string name="service_name">服务名称：</string>
    <string name="service_price">服务价格：</string>
    <string name="yuan">元</string>
    <string name="take_time">拍摄时间：</string>
    <string name="one_day">1天</string>
    <string name="half_day">半天</string>
    <string name="photo_number">照片数：</string>
    <string name="zhang">张</string>
    <string name="finish_number">精修片数：</string>
    <string name="negative">底片：</string>
    <string name="studio_provides">影棚提供：</string>
    <string name="provide_make_up">化妆提供：</string>
    <string name="provide_photo_album">相册提供：</string>
    <string name="provide_clothing">服装提供：</string>
    <string name="send_all">全送</string>
    <string name="no_send_all">不全送</string>
    <string name="booking_information">预约信息</string>
    <string name="plase_giveaevaluation">亲，给个评价吧</string>
    <string name="talksomething">说两句：</string>
    <string name="anonymous_evaluation">匿名评价</string>
    <string name="release">发布</string>
    <string name="personal_information">个人信息</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="area">地区</string>
    <string name="age">年龄</string>
    <string name="practitioners">从业经验</string>
    <string name="personal_profile">个人简介</string>
    <string name="please_take_onetofifteen">简单的介绍下自己吧（30字以内）</string>
    <string name="photographer_certification">摄影师认证</string>
    <string name="upload_picofyour">上传一张你的作品</string>
    <string name="idcard_bothsides">身份证正反面</string>
    <string name="haveread_xunpai">已阅读《寻拍入驻摄影师条款》</string>
    <string name="youwonttosay">您想对我们说：</string>
    <string name="your_telephone">您的联系方式：</string>
    <string name="send">发送</string>
    <string name="jump">跳过</string>
    <string name="ivitation">邀约</string>
    <string name="youmind_takeme">你的小心思，交给我！</string>
    <string name="goon_shake">继续摇摇看</string>
    <string name="xunpai_foryou">寻拍为您推荐：</string>
    <string name="String_for_progressdialog">努力加载中...</string>
    <string name="categroy">类别</string>
    <string name="turndown">关闭</string>
    <string name="report">举报</string>
    <string name="phonenumber">手机号</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="Iam_photographer">我是摄影师</string>
    <string name="cipher">密码</string>
    <string name="Verification_code">验证码</string>
    <string name="send_Verification_code">发送验证码</string>
    <string name="talkwithxunpai">与寻拍聊聊</string>
    <string name="praise">赞</string>
    <string name="personal_data_comment">我的评论</string>
    <string name="personal_data_add_experience">我的经验</string>
    <string name="personal_data_experience">我的经验</string>
    <string name="register_input_phone">输入手机号码</string>
    <string name="space_menu_title">宝宝空间</string>
    <string name="space_btn_news">消息</string>
    <string name="space_btn_album">宝宝相册</string>
    <string name="space_btn_files">成长档案</string>
    <string name="space_btn_confirm">代接确认</string>
    <string name="space_btn_leave">在线请假</string>
    <string name="space_btn_parents">家长叮嘱</string>
    <string name="space_btn_recipes">食谱</string>
    <string name="space_btn_check">考勤</string>
    <string name="space_btn_record_weight">记录体重</string>
    <string name="space_btn_input_weight">录入体重</string>
    <string name="space_btn_record_height">记录身高</string>
    <string name="space_btn_input_height">录入身高</string>
    <string name="space_btn_teacher_review">老师点评</string>
    <string name="space_btn_baby_teacher">宝宝老师</string>
    <string name="space_btn_baby_friend">宝宝好友</string>
    <string name="space_btn_announcement">通知公告</string>
    <string name="space_btn_baby_courseware">宝宝课件</string>
    <string name="space_btn_class">班级课程</string>
    <string name="space_btn_class_activity">班级活动</string>
    <string name="space_btn_park">乐园</string>
    <string name="space_baby_teacher_title">宝宝老师</string>
    <string name="space_happy_school">快乐学堂</string>
    <string name="diary_menu_title">成长日记</string>
    <string name="moment_menu_title">动态</string>
    <string name="web_menu_title">校网</string>
    <string name="web_btn_introduce">园区介绍</string>
    <string name="web_btn_teacher_style">教师风采</string>
    <string name="web_btn_recipes">每周食谱</string>
    <string name="web_btn_show">宝宝秀场</string>
    <string name="web_btn_recruit">校园招聘</string>
    <string name="web_btn_class">兴趣班</string>
    <string name="web_btn_leave">在线请假</string>
    <string name="web_btn_enroll">入学报名</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="me_menu_title">我</string>
    <string name="me_tag">职业标签</string>
    <string name="me_fragment_name">张三</string>
    <string name="me_fragment_company">温州学校</string>
    <string name="me_fragment_position">教师</string>
    <string name="me_fragment_city_text">城市：</string>
    <string name="me_fragment_city">温州</string>
    <string name="me_fragment_email_text">邮箱：</string>
    <string name="me_fragment_email">123456789@qq.com</string>
    <string name="personal_data_menu_title"> 个人资料</string>
    <string name="me_post_text">职务:</string>
    <string name="me_add_tag_text">添加标签</string>
    <string name="me_collect_text">收藏资讯</string>
    <string name="me_buildingring_text">动态</string>
    <string name="me_apply_expert_text">成为餐饮行家</string>
    <string name="me_my_service_text">服务</string>
    <string name="me_service_state_text">开通</string>
    <string name="me_service_endtime_text">2016-01-01</string>
    <string name="me_order_text">微校通服务明细</string>
    <string name="me_pay_text">支付微校通服务费</string>
    <string name="me_qr_code_text">二维码</string>
    <string name="me_clock_in_text">扫一扫打卡</string>
    <string name="me_invite_text">邀请家人</string>
    <string name="me_invited_text">已邀请的家人</string>
    <string name="scan_text">扫描二维码</string>
    <string name="me_my_baby_text">我的宝宝</string>
    <string name="me_help_text">使用帮助</string>
    <string name="me_service_text">在线客服</string>
    <string name="me_setting_text">设置</string>
    <string name="space_contacts">联系人列表</string>
    <string name="me_invite_phone">请输入手机号</string>
    <string name="me_invite_name">请输入家人姓名</string>
    <string name="main_set_password_title">设置密码</string>
    <string name="main_reset_password_title">重新设置密码</string>
    <string name="baby_album_title">宝宝相册</string>
    <string name="space_album_title1">爸爸妈妈好久没有上传照片了。</string>
    <string name="space_album_button2">催一下</string>
    <string name="space_album_title3">歌唱比赛相册</string>
    <string name="btn_class">班级课程</string>
    <string name="space_news_title">消息中心</string>
    <string name="space_news_received">我收到的</string>
    <string name="space_news_send">我发送的</string>
    <string name="space_news_address">通讯录</string>
    <string name="space_news_homework">作业</string>
    <string name="space_confirm_title">代接确认</string>
    <string name="space_confirm_text">收到孩子接送提醒</string>
    <string name="space_news_name1">张老师</string>
    <string name="space_news_new1">张老师说你孩子今天学习很好</string>
    <string name="space_news_name2">李老师</string>
    <string name="space_news_new2">李老师说你孩子今天学习不错</string>
    <string name="space_news_name3">孙老师</string>
    <string name="space_news_new3">孙老师说你孩子今天学习差不多</string>
    <string name="space_news_name4">王老师</string>
    <string name="space_news_new4">王老师说你孩子今天学习不认真</string>
    <string name="me_scan_qrcode">扫描二维码</string>
    <string name="web_introduce_title">园所介绍</string>
    <string name="web_introduce_text">&#160;&#160;&#160;&#160;&#160;&#160;幼儿园建于2004年9月，占地面积有3.25亩,房屋建筑面积1800多个平方，绿化面积占有200个平方，可同时容纳800名幼儿入园。现在园幼儿406名，分为学前、大中小10个班，园内共有29名教职工，其中具有幼师资格的专业教师10名，另外还配有11名保育员，勤杂工1名，炊事员2名，保安3名，驾驶员2名，是我市目前规模最大的私立幼儿园。</string>
    <string name="web_teacher_style_title">教师风采</string>
    <string name="web_today_recipes_title">每周食谱</string>
    <string name="web_recruit_title">校园招聘</string>
    <string name="generate_qrcodeText">请输入内容</string>
    <string name="generate_qrcode">生成二维码</string>
    <string name="add_logo">添加Logo</string>
    <string name="beSure">确定</string>
    <string name="quit">清空</string>
    <string name="string_send_message">发送消息</string>
</resources>