<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/title_bg_color"
            android:gravity="center"
            android:text="@string/string_send_message"
            android:textColor="@color/whilte"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/up_jiantou"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/btn_exit"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left_jiantou" />
        </RelativeLayout>

    </RelativeLayout>

    <EditText
        android:id="@+id/send_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_350"
        android:background="@null"
        android:gravity="top"
        android:hint="请输入消息内容" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/parting_line"
            android:background="@color/title_bg_color"
            android:text="@string/beSure"
            android:clickable="true"
            android:textColor="@color/white" />

        <View
            android:id="@+id/parting_line"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/activity_size_10"
            android:layout_marginRight="@dimen/activity_size_10" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/parting_line"
            android:background="@color/title_bg_color"
            android:text="@string/quit"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>