<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal">
    <!--第一个按钮-->
    <RelativeLayout
        android:id="@+id/space_leave"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <RelativeLayout
            android:id="@+id/rl_qingjia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_website"
                android:layout_width="@dimen/activity_size_50"
                android:layout_height="@dimen/activity_size_50"
                android:layout_centerHorizontal="true"
                android:background="@drawable/main_zaixianqingjia"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_website"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_size_8"
                android:text="@string/space_btn_leave"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>


    </RelativeLayout>

    <!--第二个按钮-->

    <RelativeLayout
        android:id="@+id/space_parents"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <RelativeLayout
            android:id="@+id/rl_dingzhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_album1"
                android:layout_width="@dimen/activity_size_50"
                android:layout_height="@dimen/activity_size_50"
                android:layout_centerHorizontal="true"
                android:background="@drawable/main_jiazhangdingzhu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_album1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_size_8"
                android:text="@string/space_btn_parents"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>


    </RelativeLayout>

    <!--第三个按钮-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte"
        android:id="@+id/space_recipes">
        <ImageView
            android:id="@+id/btn_files"
            android:layout_width="@dimen/activity_size_50"
            android:layout_height="@dimen/activity_size_50"
            android:background="@drawable/main_shipu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_10"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/space_btn_recipes"
            android:layout_below="@+id/btn_files"
            android:layout_marginTop="@dimen/activity_size_8"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15"
            />


    </RelativeLayout>




    <!--第四个按钮-->
    <RelativeLayout
        android:id="@+id/space_check"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <ImageView
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/activity_size_50"
            android:layout_height="@dimen/activity_size_50"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_10"
            android:background="@drawable/main_kaoqin"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_confirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_8"
            android:text="@string/space_btn_check"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15" />


    </RelativeLayout>

</LinearLayout>
