<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginTop="@dimen/activity_size_1"
    android:orientation="horizontal">
    <!--第一个按钮-->
    <RelativeLayout
        android:id="@+id/space_news"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <RelativeLayout
            android:id="@+id/rl_xiaoxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_website1"
                android:layout_width="@dimen/activity_size_50"
                android:layout_height="@dimen/activity_size_50"
                android:layout_centerHorizontal="true"
                android:background="@drawable/main_xiaoxi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_website1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_size_8"
                android:text="@string/space_btn_news"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>


    </RelativeLayout>

    <!--第二个按钮-->


    <RelativeLayout
        android:id="@+id/space_album"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <ImageView
            android:id="@+id/btn_album"
            android:layout_width="@dimen/activity_size_50"
            android:layout_height="@dimen/activity_size_50"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_10"
            android:background="@drawable/main_xiangce"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_album"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_8"
            android:text="@string/space_btn_album"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/space_files"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <ImageView
            android:id="@+id/btn_files"
            android:layout_width="@dimen/activity_size_50"
            android:layout_height="@dimen/activity_size_50"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_10"
            android:background="@drawable/main_chengzhangdangan"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_files"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_size_8"
            android:text="@string/space_btn_files"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15" />


    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/space_confirm"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:background="@color/whilte">

        <RelativeLayout
            android:id="@+id/rl_daijie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_confirm1"
                android:layout_width="@dimen/activity_size_50"
                android:layout_height="@dimen/activity_size_50"
                android:layout_centerHorizontal="true"
                android:background="@drawable/main_daijiequeren" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_confirm1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_size_8"
                android:text="@string/space_btn_confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

    </RelativeLayout>

    <!--第三个按钮-->


    <!--第四个按钮-->


</LinearLayout>
